# pyrfor

./: .env.example  .env.production.example  .env.vercel  .eslintrc.json  .gitignore  .npmrc  .vercelignore  ACCESSIBILITY_UPDATES.md  ARCHITECTURE.md  BUNDLE_OPTIMIZATION_SUMMARY.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURSOR-TASK-PHASE1.md  DEPLOY.md  DEPLOYMENT.md  DESIGN.md  FEATURES_CHECKLIST.md  FULL_PROJECT_ANALYSIS.md  MEMORY.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  README_AI.md  RELEASE.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  STATUS.md  TECH_DEBT.md  capacitor.config.ts  eslint.config.mjs  instrumentation-client.ts  instrumentation.ts  lighthouserc.json  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.accessibility.config.ts  (+8 more)
.changeset/: config.json  initial-engine-release.md
.devcontainer/: devcontainer.json
.github/: Pull_Request_TEMPLATE.md  dependabot.yml
__tests__/: README.md  app-api-ai-chat-route.test.ts  setup.ts  (+7 more)
apps/pyrfor-ide/src-tauri/: Cargo.toml  Info.plist  package.json  tauri.conf.json
apps/pyrfor-ide/src-tauri/binaries/: README.md  pyrfor-daemon-aarch64-apple-darwin
apps/pyrfor-ide/src-tauri/capabilities/: default.json
apps/pyrfor-ide/src-tauri/src/: lib.rs  main.rs  onboarding.rs  secrets.rs  settings.rs  sidecar.rs  state.rs
apps/pyrfor-ide/src-tauri/tests/: secrets_test.rs
e2e/: README.md  (+4 more)
src-tauri/: .gitignore  Cargo.toml  package.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  local_gateway.rs  main.rs
(+1323 files in other folders)
