[package]
name = "ceoclaw-desktop"
version = "1.0.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "ceoclaw_desktop"
path = "src/lib.rs"

[[bin]]
name = "ceoclaw-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
tauri = { version = "2.5.6", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2.4.1"
