[package]
name = "pyrfor-ide"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "pyrfor_ide"
path = "src/lib.rs"

[[bin]]
name = "pyrfor-ide"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "process"] }
tauri = { version = "2.5.6", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2.4.1"
keyring = "3"
tauri-plugin-dialog = "2"
dirs = "5"
